# akamai-v3-sensor

./: .gitignore  LICENSE  README.md  akamai_sensorbypass.go  go.mod  local_proxy.go  xxxKlANlikexxxbigniggas.md
.github/: FUNDING.yml
.github/workflows/: bindings.yml
bindings/: .gitignore  Makefile  README.md  bump-version.sh
bindings/clib/: build.sh  go.mod  sensor.go  sensor_fast.go
bindings/dotnet/: README.md  Sensor.sln
bindings/nodejs/: README.md  package.json  test.js
bindings/python/: README.md  build_wheels.py  pyproject.toml
bindings/python/sensor/: __init__.py  client.py
client/: auth.go  certpin.go  client.go  compat.go  cookie.go  cookiejar.go  helpers.go  hooks.go  http3_client.go  multipart.go  options.go  prepared.go  stream.go  url.go
dns/: cache.go
examples/csharp-examples/: BasicExamples.cs  CustomFingerprint.cs  LocalProxyExamples.cs  NewFeatures.cs  ProxySwitching.cs  QuicIdleTimeout.cs  SessionResumption.cs  (+3 more)
fingerprint/: akamai.go  client_hello_ids.go  custom_preset.go  describe.go  embedded.go  headers.go  ja3.go  preset_pool.go  presets.go  registry.go
pool/: pool.go  quic_pool.go
protocol/: types.go
proxy/: masque.go  masque_providers.go  socks5_tcp.go  socks5_udp.go
session/: cookie_jar.go  fork.go  manager.go  session.go  state.go  warmup.go
transport/: errors.go  freebind_linux.go  freebind_other.go  http1_transport.go  http2_transport.go  http3_transport.go  keylog.go  speculative_conn.go  stream.go  tcpip.go  tcpip_darwin.go  tcpip_linux.go  tcpip_other.go  tcpip_windows.go  tls_cache.go  transport.go
(+86 files in other folders)
